--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,9 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+plugin.android.apt.version         = 1.8
+plugin.retrolambda.version         = 3.3.0-beta4
+plugin.frodo.version               = 0.8.3
+plugin.hugo.version                = 1.2.1
+stetho.version                     = 1.3.1
