--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.nathansdunn.blendify"
+        applicationId "com.nathansdunn.youtruvian"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
